--- a/chat/templates/home.html
+++ b/chat/templates/home.html
@@ -4,11 +4,11 @@
 {% block title %}Home{% endblock %}
 
 {% block head %}
-<style media="screen">
+<!-- <style media="screen">
     .container .card {
         max-width:800px
     }
-</style>
+</style> -->
 {% endblock %}
 
 {% block content %}
