--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     <link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style media="screen">
+    <!-- <style media="screen">
         html,
         body {
           height: 100%;
@@ -21,7 +21,7 @@
           align-items: center;
           background-color: #f5f5f5;
         }
-    </style>
+    </style> -->
     {% block head %}{% endblock %}
 </head>
 <body class="text-center">
