--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -4,7 +4,7 @@
 {% block title %}Chat{% endblock %}
 
 {% block head %}
-<!-- <style media="screen">
+<style media="screen">
     .container .card {
         max-width:800px
     }
@@ -14,7 +14,7 @@
     }
     .card-chat p {
         margin-bottom: 0;
-    } -->
+    }
 </style>
 {% endblock %}
 
