--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -47,8 +47,8 @@
         });
 
         websocket = new WebSocket(
-            'wss://' + window.location.host +
-            '/chat/{{ request.resolver_match.kwargs.chatname }}/');
+            'ws://' + window.location.host +
+            '/ws/chat/{{ request.resolver_match.kwargs.chatname }}/');
 
         websocket.onmessage = function(e) {
             var data = JSON.parse(e.data);
