--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -48,7 +48,7 @@
 
         websocket = new WebSocket(
             'wss://' + window.location.host +
-            '/wss/chat/{{ request.resolver_match.kwargs.chatname }}/');
+            '/ws/chat/{{ request.resolver_match.kwargs.chatname }}/');
 
         websocket.onmessage = function(e) {
             var data = JSON.parse(e.data);
