--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -46,7 +46,8 @@
             $('#message, #send-message').removeClass('d-none');
         });
 
-        
+        var loc = window.location;
+
         var wsStart = 'ws://';
         if (loc.protocol == 'https:') {
             wsStart = 'wss://'
